# satsuki

./: .bumpversion.cfg  .gitignore  .mergify.yml  .pylintrc  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  appveyor.yml  azure-pipelines.yml  darwin_sha256.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  lint.yml  publish.yml  release.yml
requirements/: ci.txt  install.txt  lint.txt  pip.txt  test.txt
satsuki/: __init__.py  cli.py  generate-standalone.py  hook-watchmaker.py  logging.conf
tests/: conftest.py  darwin_sha256.txt  gravitybee-info.json  test.file  test_satsuki.py
