[metadata]
name = satsuki
description = Manage GitHub releases and release assets.
version = 0.1.0
author = YakDriver
long_description = file: README.rst, CHANGELOG.rst
author_email = projects@plus3it.com
url = https://github.com/YakDriver/satsuki
license = Apache Software License 2.0
platforms = 
	Linux
	Windows
	Darwin
	MacOS
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
  Operating System :: MacOS :: MacOS X
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Utilities

[options]
install_requires = 
	gravitybee
  click
packages = satsuki
include_package_data = True

[options.entry_points]
console_scripts = 
	satsuki = satsuki.cli:main

[bdist_wheel]
universal = 1

[tool:pytest]
mock_use_standalone_module = true
norecursedirs = 
	.git
	.tox
	.env
	__pycache__
	dist
	build
	htmlcov
python_files = 
	test_*.py
	*_test.py
	tests.py
addopts = 
	-rxEfsw
	--strict
	--doctest-modules
	--doctest-glob=\*.md
	--tb=short

